# ChangeLog for sec-policy/selinux-base-policy
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-base-policy/ChangeLog,v 1.68 2009/12/16 02:53:36 pebenito Exp $

*selinux-base-policy-2.20101213-r5 (31 Jan 2011)

  31 Jan 2011; <swift@gentoo.org> -selinux-base-policy-2.20101213.ebuild,
  -selinux-base-policy-2.20101213-r1.ebuild,
  -selinux-base-policy-2.20101213-r2.ebuild,
  -selinux-base-policy-2.20101213-r3.ebuild,
  +selinux-base-policy-2.20101213-r5.ebuild,
  +files/patchbundle-selinux-base-policy-2.20101213-r5.tar.bz2:
  Various policy updates

*selinux-base-policy-2.20101213-r4 (22 Jan 2011)

  22 Jan 2011; <swift@gentoo.org> +selinux-base-policy-2.20101213-r4.ebuild,
  +files/patchbundle-selinux-base-policy-2.20101213-r4.tar.bz2:
  Update on roles, added interfaces for a few additional packages like
  links, mutt but also vde. Fix build issue when building java-config

*selinux-base-policy-2.20101213-r3 (07 Jan 2011)

  07 Jan 2011; <swift@gentoo.org> +files/add-gorg-r3.patch,
  +files/add-modules-r3.patch, +files/add-skype-r3.patch,
  +files/fix-staff-r3.patch, +files/fix-sysadm-r3.patch,
  +selinux-base-policy-2.20101213-r3.ebuild, +files/fix-unprivuser-r3.patch:
  Adding support for additional modules (gorg, skype)

*selinux-base-policy-2.20101213-r2 (06 Jan 2011)

  06 Jan 2011; <swift@gentoo.org> +selinux-base-policy-2.20101213-r2.ebuild,
  +files/fix-sudo.patch:
  Add fix for sudo (key timing)

*selinux-base-policy-2.20101213 (01 Jan 2011)

  01 Jan 2011; Chris Richards <gizmo@www.giz-works.com>
  +selinux-base-policy-2.20101213.ebuild,
  +files/selinux-base-policy-20070329.diff, +files/config,
  +files/modules.conf.strict, +files/modules.conf.strict.20070928,
  +files/modules.conf.strict.20080525, +files/modules.conf.strict.20090730,
  +files/modules.conf.targeted, +files/modules.conf.targeted.20070928,