@@ -19,5 +19,6 @@ AUX selinux-base-policy-20070329.diff 2822 RMD160 164c86d9eb814ada83499f529445d7
 DIST refpolicy-2.20101213.tar.bz2 559450 RMD160 4858f792f4db5b179de6fb8419a626c29d59bdd3 SHA1 0e881e99b8950a358eadc44633551ca10f12eaee SHA256 b691ee8f6066cc19bb0d4384fe3be277d97d22e9d4ac2db0c252065e8c3535de
 EBUILD selinux-base-policy-2.20101213-r4.ebuild 2835 RMD160 d0e13895cf94ca88129a1701b6b19c095b92ac2c SHA1 51e7fbc58c940804f976715cd4ac58db56be0b92 SHA256 2606dff3e2c0cc0df2d6afdb63fe55068757917fdb03a88bdfcf428594a11dfd
 EBUILD selinux-base-policy-2.20101213-r5.ebuild 2966 RMD160 51a93a365ec4ef49e4eb3db62619bc128c7f2b91 SHA1 d10a2ade60b4111081a0a8f1f4bc57378f6214d8 SHA256 dde60477c8f54d49392aa9fa27363c86478a768f788550df5ea67e768b9a5e78
-MISC ChangeLog 17038 RMD160 f8a0c9913a5dc15451a5d0201afef1876696a4d6 SHA1 06f5f0a773d2f207249712fab17ba27d342ede78 SHA256 2ed059ad59f37fb35e79bc6beb5c7f2041e4267d78fe47575a87837cbae7b5e3
+EBUILD selinux-base-policy-2.20101213-r6.ebuild 2985 RMD160 cb8f09671b9c553d42f11a51f8ff6fba9b8c62e8 SHA1 b0a87c89f86925e24564437a37b6013704366cdd SHA256 e260c587ef66d2fc745f3e1fb278d277be4a8db5b5679f5ee0f548ca1b577626
+MISC ChangeLog 17207 RMD160 ead4bc68c200acf97c27164e05fb4ae29bd4db07 SHA1 f69ce91bf5be208d9711504e185446309cd03463 SHA256 51a737cb7467e59d1b2c5c3bd587a4cd843795f2eea01af8ecf3e320cd540789
 MISC metadata.xml 707 RMD160 119a98090a7457d57a2dc48fc822a89bad59007d SHA1 cc4658f695a4567a037ff619d27d259763d72611 SHA256 a7dd87ba539ac00b1a34f7ec8c6ca7e42f7378bf57906eef2d66a967502753de
