@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-base-policy/ChangeLog,v 1.68 2009/12/16 02:53:36 pebenito Exp $
 
+*selinux-base-policy-2.20101213-r6 (31 Jan 2011)
+
+  31 Jan 2011; Chris Richards +selinux-base-policy-2.20101213-r6.ebuild:
+  Bug #322513. Add dependency on udev >= 151
+
 *selinux-base-policy-2.20101213-r5 (31 Jan 2011)
 
   31 Jan 2011; <swift@gentoo.org> -selinux-base-policy-2.20101213.ebuild,
